chore:add ws & cqcode handle

--- a/src/chatin/chatin.module.less
+++ b/src/chatin/chatin.module.less
@@ -39,7 +39,9 @@
 .chat-content .chat-window {
   flex: 1;
 }
-
+.chat-raw {
+  padding: 0.5em;
+}
 .chat-content .chat-title {
   height: 48px;
   box-shadow: 0px 1px 0px rgba(200, 200, 200, 0.9);
