--- a/src/components/bubble/bubble.module.less
+++ b/src/components/bubble/bubble.module.less
@@ -7,6 +7,7 @@
   padding: 0.65em 1em 0.65em 1.5em;
   z-index: 1;
   overflow: hidden;
+  max-width: 80%;
   &::before{
     position: absolute;
     z-index: -1;
@@ -38,7 +39,7 @@
     border-radius: 5px 5px 5px 0px;
   }
   &::after{
-    left: 0;
+    left: 1px;
     clip-path: path('M 0 14 C 7 11,7 0,7 0 v 14');
   }
 }
@@ -48,7 +49,7 @@
     border-radius: 5px 5px 0px 5px;
   }
   &::after{
-    right: 0;
+    right: 1px;
     clip-path: path('M 7 14 C 0 11,0 0,0 0 v 14');
   }
 }
