--- a/src/chatin/chatin.module.less
+++ b/src/chatin/chatin.module.less
@@ -1,70 +1,19 @@
-.chat-body {
+.main{
+  display: flex;
   width: 100%;
   height: 100%;
-  background-color: #fff;
-  display: flex;
-  position: relative;
 }
 
-.chat-contact-list {
-  min-width: 200px;
-}
-
-.chat-contact-avatar-list {
+.app-list{
   width: 48px;
-}
-
-.chat-border {
-  width: 1px;
   height: 100%;
-  background-color: rgba(200, 200, 200, 0.9);
-  cursor: ew-resize;
-  position: relative;
 }
-
-.chat-border-handle {
-  position: absolute;
-  width: 20px;
-  height: 100%;
-  left: -10px;
-}
-
-.chat-content {
+.content{
   flex: 1;
   height: 100%;
-  display: flex;
-  flex-flow: column;
+  overflow: hidden;
 }
-
-.chat-content .chat-window {
-  flex: 1;
-}
-.chat-raw {
-  padding: 0.5em;
-}
-.chat-content .chat-title {
-  height: 48px;
-  box-shadow: 0px 1px 0px rgba(200, 200, 200, 0.9);
-}
-
-.chat-content .chat-enter {
-  height: 48px;
-  box-shadow: 0px -1px 0px rgba(200, 200, 200, 0.9);
-  display: flex;
-}
-
-.chat-content .chat-image {
-  font-size: 24px;
-  padding: 12px;
-  cursor: pointer;
-}
-
-.chat-mask {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.45);
-  z-index: 1000;
+.icon{
+  padding: 6px;
+  text-align: center;
 }
