feat:add base sendrequest

--- a/src/module/content/qq/qq.module.less
+++ b/src/module/content/qq/qq.module.less
@@ -9,6 +9,7 @@
 .chat-contact-list {
   min-width: 200px;
   border-right: 1px solid rgba(0,0,0,0.2);
+  overflow-x: hidden;
   .contact-base-info{
     height: 62px;
     padding: 0.5em;
