feat:model add insert

--- a/src/module/content/qq/qq.module.less
+++ b/src/module/content/qq/qq.module.less
@@ -10,6 +10,10 @@
   min-width: 200px;
   border-right: 1px solid rgba(0,0,0,0.2);
   overflow-x: hidden;
+  overflow-y: hidden;
+  &:hover{
+    overflow-y: overlay;
+  }
   .contact-base-info{
     height: 62px;
     padding: 0.5em;
