--- a/src/module/content/qq/qq.module.less
+++ b/src/module/content/qq/qq.module.less
@@ -80,6 +80,11 @@
 .chat-content .chat-window {
   flex: 1;
 }
+.chat-window-content{
+  display: flex;
+  max-height: 100%;
+  flex-flow: column-reverse;
+}
 .chat-raw {
   padding: 0.5em;
 }
