--- a/src/module/content/qq/qq.module.less
+++ b/src/module/content/qq/qq.module.less
@@ -19,7 +19,10 @@
     padding: 0.5em;
     line-height: 1em;
     display: flex;
-    
+    cursor: pointer;
+    &:hover{
+      background: rgba(0, 0, 0,0.05);
+    }
     .avatar{
       width: 48px;
       height: 48px;
@@ -87,6 +90,7 @@
 }
 .chat-raw {
   padding: 0.5em;
+  position: relative;
 }
 .chat-content .chat-title {
   height: 48px;
