fix: bubble style

--- a/src/module/content/qq/qq.module.less
+++ b/src/module/content/qq/qq.module.less
@@ -92,9 +92,17 @@
   padding: 0.5em;
   position: relative;
 }
+.chat-raw-left {
+  display: flex;
+}
+.chat-raw-right{
+  display: flex;
+  flex-flow:column-reverse;
+}
 .chat-content .chat-title {
   height: 48px;
   box-shadow: 0px 1px 0px rgba(200, 200, 200, 0.9);
+  padding: 0.7em;
 }
 
 .chat-content .chat-enter {
